DB-6357: Touch up CSS, fix broken css from modules->tw conversion

--- a/packages/create-pantheon-decoupled-kit/src/templates/gatsby-wp/src/components/paginator.module.css
+++ b/packages/create-pantheon-decoupled-kit/src/templates/gatsby-wp/src/components/paginator.module.css
@@ -1,3 +1,14 @@
+.container {
+	display: flex;
+	flex-direction: column;
+	min-height: 80vh;
+	margin-bottom: auto;
+}
+
+.componentContainer {
+	min-height: 80vh;
+}
+
 .pageCount {
 	font-size: var(--4);
 	font-weight: 600;
