--- a/packages/create-pantheon-decoupled-kit/src/templates/gatsby-wp/src/templates/authApi.module.css
+++ b/packages/create-pantheon-decoupled-kit/src/templates/gatsby-wp/src/templates/authApi.module.css
@@ -13,7 +13,7 @@
 	font-weight: 800;
 }
 
-.container > a, .container > * a {
+.link {
 	text-decoration-line: underline;
 	font-size: var(--5);
 	font-weight: 500;
@@ -23,10 +23,10 @@
 .content {
 	margin-right: auto;
 	margin-left: auto;
+	margin-top: var(--12);
 }
 
-.content > p {
-	margin-top: var(--12);
+.paragraph {
 	font-size: var(--5);
 }
 
@@ -37,6 +37,6 @@
 	}
 
 	.containerTitle {
-		font-size: var(--8)
+		font-size: var(--8);
 	}
 }
